# msh2sdf

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
msh2sdf/: __init__.py  msh2sdf.py
tests/: test_msh2sdf.py
