[tool.poetry]
name = "msh2sdf"
version = "0.1.0"
description = "A Python package designed for unfitted finite element simulations."
authors = ["Stephan Gahima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"