[tool.poetry]
name = "msh2sdf"
version = "1.0.0"
description = "A Python package designed for unfitted finite element simulations."
authors = ["Stephan Gahima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.8"
scipy = "^1.17.0"
ipykernel = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-semantic-release (>=10.5.3,<11.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
